--- a/config/experiments_external_data/LR.yaml
+++ b/config/experiments_external_data/LR.yaml
@@ -3,9 +3,9 @@ USER_ID_FIELD: user_id
 ITEM_ID_FIELD: item_id
 load_col:
     inter: [user_id, item_id, label]
-#    item: [item_id, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 6
-#2, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
+    item:  [item_id, 'embedding']
 
+numerical_features: ['embedding']
 
 data_path: data/processed/MIND_dataset/
 benchmark_filename: ['train', 'dev', 'dev']
@@ -14,6 +14,7 @@ worker: 6
 
 # Training and evaluation config
 train_batch_size: 8192
+lr: 0.1
 eval_step: 50
 epochs: 300
 
