--- a/config/experiments_external_data/MultiVAE_model.yaml
+++ b/config/experiments_external_data/MultiVAE_model.yaml
@@ -2,29 +2,31 @@
 USER_ID_FIELD: user_id
 ITEM_ID_FIELD: item_id
 load_col:
-    inter: [user_id, item_id, label]
-    item: [item_id, 'embedding']
-
-numerical_features: ['embedding']
+    inter: [user_id, item_id]
 
 data_path: data/processed/MIND_dataset/
 benchmark_filename: ['train', 'dev', 'dev']
 
-worker: 6
+min_user_inter_num: 10
+min_item_inter_num: 10
 
-# Training and evaluation config
-train_batch_size: 2048
-eval_step: 10
-epochs: 100
-embedding_size: 10
-mlp_hidden_size: [100, 100, 100]
-learning_rate: 0.1
+#enable_amp: True
+train_batch_size: 1024
+eval_batch_size: 8096
 #save_dataloaders: True
+#save_dataset: True
 
+latent_dimension: 50
+mlp_hidden_size: [100, 90, 70, 50]
+dropout_prob: 0.5
+
+learning_rate: 0.001
+eval_step: 25
+epochs: 300
+worker: 1
 
 metrics: ['Precision', 'Recall', 'NDCG', 'MAP']
 topk: [1, 2, 4, 6, 8, 10]
 valid_metric: NDCG@10
 eval_args:
     mode: uni10
-log_wandb: True
